--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,8 @@ development:
   database: omawho_development
   host: localhost
   port: <%= ENV["BOXEN_POSTGRESQL_PORT"] || 5432 %>
+  password: password
+  username: postgres
 
 test:
   adapter: postgresql
